Fix for too wide group logo

--- a/less/gn_results_dutch.less
+++ b/less/gn_results_dutch.less
@@ -236,6 +236,11 @@ ul.gn-resultview {
       .col-md-2 {
         padding: 0;
       }
+      .gn-md-logo {
+        img {
+          max-width: 100%;
+        }
+      }
       .gn-md-title {
         [gn-selection-md] {
           display: none;
